@@ -31,6 +31,8 @@ G_BEGIN_DECLS
 bool ccss_block_parse_border (ccss_block_t *self, char const *property, 
 			      CRTerm const *values);
 
+char const * ccss_border_lookup_name (ccss_border_style_type_t border_style);
+
 G_END_DECLS
 
 #endif /* CCSS_BORDER_PARSER_H */
